--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 .Clear {
-    border: 1 solid
-    background: #0088ff
-    color: white;
+    border: 1 solid;
+    background: #0088ff;
+    color: white ;
+
 } 
