--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 .Clear {
-    border: 1 solid;
     background: #0088ff;
     color: white ;
 
 } 
+
+.Mist {
+   background: gray;
+   color: white;    
+}
