A few fixes after meeting with OTAVia

--- a/css/main.css
+++ b/css/main.css
@@ -6,5 +6,23 @@
 
 .Mist {
    background: gray;
+   color: white;   
+   background-image: url("../icons/mist2.jpg"); 
+   min-height: 100%;
+   min-width: 1024px;
+   
+   width: 100%;
+   height: auto;
+	
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   background-repeat: no-repeat;
+   background-size: auto auto;
+}
+
+.Clouds {
+   background: darkgray;
    color: white;    
 }
