Image specifies Overalll Weather. NOt usind the classes any more directly

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 .Clear {
-    background: #0088ff;
-    color: white ;
+##    background: #0088ff;
+/*     color: white ; */
 
 } 
 
 .Mist {
    background: gray;
    color: white;   
-   background-image: url("../icons/mist2.jpg"); 
+   background-image: url("../icons/Rain.jpg"); 
    min-height: 100%;
    min-width: 1024px;
    
@@ -23,6 +23,44 @@
 }
 
 .Clouds {
-   background: darkgray;
-   color: white;    
+   background: gray;
+   color: white;   
+   /* background-image: url("../icons/cloud.jpg"); */
+   min-height: 100%;
+   min-width: 1024px;
+   
+   width: 100%;
+   height: auto;
+	
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   background-repeat: no-repeat;
+   background-size: auto auto;
 }
+
+.Background {
+   width: 200px;
+   height: 200px;
+   background-color:  #000000;
+}
+
+.Rain {
+   background: gray;
+   color: white;   
+   background-image: url("../icons/rain.jpg"); 
+   min-height: 100%;
+   min-width: 1024px;
+   
+   width: 100%;
+   height: auto;
+	
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   background-repeat: no-repeat;
+   background-size: auto auto;
+}
+
