--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,27 @@
-
-
 .dailySummary {
-	width:  40%;
-	height: 40%;
+    width: 40%;
+    height: 40%;
 }
-
 
 .summaryIcons {
-	width: 32px;
-	height: 32px;
+    margin: 10px;
+    vertical-align: center;
+    text-align: center;
+    width: 32px;
+    height: 32px;
 }
 
-
 .DateLayout {
-	width: 20%;
-	text-align: center;
+    width: 20%;
+    text-align: center;
 }
 
 .timeLayout {
-	width: 20%;
-	text-align:  center;
+    width: 20%;
+    text-align: center;
 }
 
 .summaryLayout {
-	margin-left: auto;
-	margin-right:  auto;
+    margin-left: auto;
+    margin-right: auto;
 }
