--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,42 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+body {
+    display: grid;
+    grid-template-areas: "header header header" "nav article ads" "footer footer footer";
+    grid-template-rows: 60px 1fr 60px;
+    grid-template-columns: 20% 1fr 15%;
+    grid-gap: 2px;
+    height: 100vh;
+    margin: 0;
+}
+
+#pageHeader {
+    grid-area: header;
+}
+
+#pageFooter {
+    grid-area: footer;
+}
+
+#mainArticle {
+    grid-area: article;
+}
+
+#mainNav {
+    grid-area: nav;
+}
+
+#siteAds {
+    grid-area: ads;
+}
+
+header,
+footer,
+article,
+nav,
+div {
+    padding: 20px;
+    background: gold;
+}
